2015-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/map.c (WriteMAPImage): Make MAP reader/writer more
	robust.  May quiet 10326 "Untrusted pointer read".

	* coders/locale.c (ReadLOCALEImage): Quiet Coverity 10108
	"Logically dead code".

	* coders/rle.c: Make URT RLE reader more robust.  Should quiet
	Coverity CID 10070 "Bad bit shift operation", as well as 10235
	"Improper use of negative value".

2015-04-04  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WriteOneJNGImage): Quiet Coverity CID issue 14370,
	"Unused value" (status was ignored).

	* coders/png.c (ReadOneJNGImage): Quiet Coverity CID issue 44724,
	"Logically dead code" (skip_to_iend can't be true).

	* coders/png.c (ReadOnePNGImage): Attempt to quiet Coverity
	CID 10232 "Missing unlock", by using png_error() instead of
	throwing an exception.

2015-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Fix Coverity 10104 "Division or
	modulo by zero".

	* magick/resize.c (ResizeImage): Fix Coverity 53404 "Division or
	modulo by zero".

	* coders/ps3.c (WritePS3MaskImage): Fix Coverity 53415 "Improper
	use of negative value".

	* coders/meta.c (parse8BIM): Fix Coverity 53413 "Improper use of
	negative value".
	(parse8BIMW): Fix Coverity 53414 "Improper use of negative value".

	* magick/utility.c (GetMagickGeometry): Fix Coverity 53403 and
	53405 "Division or modulo by float zero".
	(GetPathComponent): Fix Coverity 53417 "Wrong sizeof argument.

	* magick/quantize.c (GrayscalePseudoClassImage): Fix Coverity
	10256 "Wrong sizeof argument".

	* magick/image.c (ResetImagePage): Fix Coverity 53401 "Division or
	modulo by float zero" and 53402 "Division or modulo by float
	zero".

	* coders/histogram.c (WriteHISTOGRAMImage): Silence Coverity 10107
	"Division or modulo by float zero".  2nd try.

	* magick/xwindow.c (MagickXImportImage): Silence Coverity 10207
	"Array compared against 0".
