@@ -38,6 +38,8 @@
 <p>2015-04-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/mpeg.c (WriteMPEGImage): Quiet Coverity 10176 &quot;Missing
+break in switch&quot;.</li>
 <li>coders/map.c (WriteMAPImage): Make MAP reader/writer more
 robust.  May quiet 10326 &quot;Untrusted pointer read&quot;.</li>
 <li>coders/locale.c (ReadLOCALEImage): Quiet Coverity 10108
