@@ -1,5 +1,8 @@
 2015-04-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/mpeg.c (WriteMPEGImage): Quiet Coverity 10176 "Missing
+	break in switch".
+
 	* coders/map.c (WriteMAPImage): Make MAP reader/writer more
 	robust.  May quiet 10326 "Untrusted pointer read".
 
